--- a/style.css
+++ b/style.css
@@ -1,21 +1,39 @@
-body{
+body {
     background: lightskyblue;
 }
 
-#canvas{
-    box-sizing:border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.canvas {
     background: yellow;
     width: 700px;
     height: 300px;
     margin: 50px auto;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-#primary-number, #secondary-number{
-    display:flex;
-    align-items:center;
+.top {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bottom {
+    width: 60%;
+    text-align: center;
+}
+
+.bottom p {
+    padding: 10px;
+}
+
+#primary-number,
+#secondary-number {
+    display: flex;
+    align-items: center;
     justify-content: center;
     font-size: 40px;
     font-weight: bold;
@@ -24,27 +42,29 @@ body{
     box-sizing: border-box;
 }
 
-#primary-number{
+#primary-number {
     border: solid 4px green;
 }
 
-#secondary-number{
+#secondary-number {
     border: solid 4px blue;
 }
 
-#add, #equal{
+#add,
+#equal {
     font-weight: bold;
     font-size: 40px;
     padding: 5px;
 }
-input{
+
+input {
     border: solid 2px cyan;
     width: 150px;
     height: 30px;
     padding-left: 25px;
 }
 
-button{
+button {
     width: 100px;
     height: 35px;
     margin: 5px;
@@ -52,4 +72,3 @@ button{
     color: white;
     border: 1px solid lightgrey;
 }
-
